--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,5 +14,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Authenticate to docker
+      run: echo $DOCKER_API_KEY | docker login --username mwangithegreat --password-stdin
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag mwangithegreat/mailhog:$(date +%s)
+      run: docker build . --file Dockerfile --tag mwangithegreat/mailhog:latest
+    - name: Push the image to Docker
+      run: docker push mwangithegreat/mailhog
